fix(header): adjust styles to not overflow the page

--- a/styles/components/header.styl
+++ b/styles/components/header.styl
@@ -1,7 +1,11 @@
 
 .site-header
   border-bottom: 1px solid $gitbook-color-rule
+  height: $header-height
+  left: 0
   padding: 15px
+  position: absolute
+  top: 0
   width: 100%
 
   .header-logo
